Fixed end dialog overflow.

--- a/style.css
+++ b/style.css
@@ -48,8 +48,8 @@ button {
 }
 
 .endgame {
-    width: 20rem;
-    height: 10rem;
+    /* width: 20rem;
+    height: 10rem; */
     top: 10rem;
     color: white;
     display: flexbox;
